<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="155dp"
                android:layout_height="155dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="250dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="250dp">

                    <ImageView
                        android:id="@+id/imageViewProfileAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/ProfileAvatar"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_avatar" />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#F3F3F3">

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:hint="@string/PhoneNumber"
                android:inputType="phone"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#F3F3F3">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="numberPassword"
                android:padding="10dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#F3F3F3">

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:hint="@string/ConfirmPassword"
                android:inputType="numberPassword"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#F3F3F3">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:hint="@string/Name"
                android:inputType="textPersonName"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#F3F3F3">

            <EditText
                android:id="@+id/editTextDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/DateOfBirth"
                android:inputType="date"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#F3F3F3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewBloodGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/BloodGroup"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radioGroupBloodGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/radioButtonBloodGroupA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BloodGroupA" />

                    <RadioButton
                        android:id="@+id/radioButtonBloodGroupB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BloodGroupB" />

                    <RadioButton
                        android:id="@+id/radioButtonBloodGroupAB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BloodGroupAB" />

                    <RadioButton
                        android:id="@+id/radioButtonBloodGroupO"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BloodGroupO" />
                </RadioGroup>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#F3F3F3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewQualification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Qualification"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerQualification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#F3F3F3">

            <TextView
                android:id="@+id/textViewCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/Coordinates"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#F3F3F3">

            <CheckBox
                android:id="@+id/checkBoxIAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/IAgree" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#D1D1D1"
            android:padding="10dp"
            android:text="@string/Save"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>