<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:padding="20dp"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="#F3F3F3">

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:hint="@string/PhoneNumber"
            android:inputType="phone"
            android:padding="10dp"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="#F3F3F3">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:layout_gravity="center"/>


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#D1D1D1"
        android:padding="10dp"
        android:text="@string/common_signin_button_text"
        android:textAllCaps="false"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#D1D1D1"
        android:padding="10dp"
        android:text="@string/SignUp"
        android:textAllCaps="false"
        android:layout_gravity="center"/>

</LinearLayout>